--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+  <div class="container imageContainer">
+    <img src="/assets/images/chaskiy-loading.gif" alt="">    
+  </div>
+</app-root>
 </body>
 <script>  
 $(function () {
