--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,20 @@
 <body>
   <app-root>
   <div class="container imageContainer">
-    <img src="/assets/images/chaskiy-loading.gif" alt="">    
+    <img src="/assets/images/chaskiy-loading.gif" alt="">
   </div>
 </app-root>
 </body>
-<script>  
+<script>
+
+var _zIndex = 1040;
 $(function () {
   $('[data-toggle="tooltip"]').tooltip();
 });
 
 $(document).on('show.bs.modal', '.modal', function () {
-    var zIndex = 1040 + (10 * $('.modal:visible').length);
+    var zIndex = _zIndex + (10 * $('.modal:visible').length);
+    _zIndex = _zIndex + 1;
     $(this).css('z-index', zIndex);
     setTimeout(function() {
         $('.modal-backdrop').not('.modal-stack').css('z-index', zIndex - 1).addClass('modal-stack');
@@ -39,17 +42,17 @@ $(document).ready(function () {
      isClosed = false;
 
     trigger.click(function () {
-      hamburger_cross();      
+      hamburger_cross();
     });
 
     function hamburger_cross() {
-      
-      if (isClosed == true) {          
+
+      if (isClosed == true) {
         overlay.hide();
         trigger.removeClass('is-open');
         trigger.addClass('is-closed');
         isClosed = false;
-      } else {   
+      } else {
         overlay.show();
         trigger.removeClass('is-closed');
         trigger.addClass('is-open');
@@ -62,10 +65,10 @@ $(document).ready(function () {
     isClosed= true;
     hamburger_cross();
   }
-  
+
   $('[data-toggle="offcanvas"]').click(function () {
         $('#wrapper').toggleClass('toggled');
-  });  
+  });
 });
 
 </script>
