--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107717414-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107717414-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-107717414-1');
-  </script>
+  </script> -->
 </head>
 <body>
   <app-root>
-  <div class="container imageContainer">
-    <img src="/assets/images/chaskiy-loading.gif" alt="">
-  </div>
-</app-root>
+    <div class="container imageContainer">
+      <img src="/assets/images/chaskiy-loading.gif" alt="">
+    </div>
+  </app-root>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-107717414-1', 'auto');  // <- add the UA-ID from your tracking code
+                                           // <- remove the last line like me
+  </script>
 </body>
 <script>
 
