--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107717414-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-107717414-1');
-  </script> -->
 </head>
 <body>
   <app-root>
@@ -89,6 +80,9 @@ $(document).ready(function () {
   $(function () {
     $('[data-toggle="tooltip"]').tooltip();
   });
+  $(function () {
+      $('[data-toggle="popover"]').popover('show');
+    });
 
 });
 
