correccion de consulta ext - problema reportado Candres

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Chaskiy</title>
   <base href="/">
-
+  <!-- booking verfication -->
+  <meta name="B-verify" content="ad9a1515938ba99c7aad5564da73154892f14300" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
